Small fixes on mobile design

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,7 @@ h1 {
 
 header h1 {
   margin:0;
+  margin-top: 1em;
 }
 
 svg {
@@ -23,15 +24,5 @@ svg {
 }
 
 @media only screen and (min-width: 600px){
-    header {
-        height: 200px;
-    }
-
-    svg{
-      height: 100px;
-    }
-    
-    h1 {
-        padding: 20px 0;
-    }      
+   
 }
